# Mosquito-Detection-System

./: .gitignore  app.py  pyproject.toml  requirements.txt  setup.py
mosquitoDetection/utils/: main_utils.py
templates/: index.html
